Fixed background colour where it only covered half the page

--- a/css-folders/wishlist.css
+++ b/css-folders/wishlist.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
 
+html,body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
 body, h1, h2, p, ul, li {
     margin: 0;
     padding: 0;
@@ -263,6 +269,7 @@ nav ul li a:hover {
 }
 
 .cart-wrap {
+    min-height: 100vh;
 	padding: 40px 0;
 	font-family: 'Raleway', sans-serif;
     background-color: #ECF0F1;
